# 1koro

./: CLAUDE.md  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml  release.yml
src/: agent.rs  api.rs  bus.rs  config.rs  context.rs  llm.rs  main.rs  mcp.rs  memory.rs  scheduler.rs  session.rs  skills.rs
src/channels/: cli.rs  discord.rs  mcp.rs  mod.rs  slack.rs
src/llm/: anthropic.rs  minimax.rs  mod.rs  openai_compatible.rs
src/memory/: core.rs  logs.rs  mod.rs  summary.rs
src/tools/: file.rs  import.rs  memory.rs  mod.rs  shell.rs
