[package]
name = "ichikoro"
version = "0.1.0"
edition = "2024"
description = "Rust-powered personal AI agent that never forgets"
license = "MIT"
repository = "https://github.com/guide-inc-org/1koro"

[[bin]]
name = "1koro"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
clap = { version = "4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
dirs = "6"
async-trait = "0.1"
